PixelPropUtils: Sync with EvoX % add AttestationHooks
Change-Id: Ic2f2ca71d635019a5eadf61825f3f962142240ee
Signed-off-by: Matt Filetto <matt.filetto@gmail.com>