@@ -1,7 +1,8 @@
 /*
  * Copyright (C) 2020 The Pixel Experience Project
+ *               2022 StatiXOS
  *               2021-2022 crDroid Android Project
- *               2023 RisingOS Android Project
+ *               2019-2023 Evolution X
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,26 +20,36 @@
 package com.android.internal.util.rising;
 
 import android.app.Application;
+import android.content.Context;
+import android.content.res.Resources;
 import android.os.Build;
 import android.os.SystemProperties;
+import android.text.TextUtils;
 import android.util.Log;
+
+import com.android.internal.R;
 
 import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 
 public class PixelPropsUtils {
 
     private static final String TAG = PixelPropsUtils.class.getSimpleName();
     private static final String DEVICE = "ro.product.device";
-    private static final boolean DEBUG = false;
+    private static final boolean DEBUG = true;
 
-    private static final Map<String, Object> propsToChangePixel5;
+    private static final String SAMSUNG = "com.samsung.";
+    private static final String SPOOF_MUSIC_APPS = "persist.sys.disguise_props_for_music_app";
+
+    private static final Map<String, Object> propsToChangeGeneric;
+    private static final Map<String, Object> propsToChangeUserdebug;
     private static final Map<String, Object> propsToChangePixel7Pro;
+    private static final Map<String, Object> propsToChangePixel5;
+    private static final Map<String, Object> propsToChangePixel2;
     private static final Map<String, Object> propsToChangePixelXL;
     private static final Map<String, Object> propsToChangeROG1;
     private static final Map<String, Object> propsToChangeROG3;
@@ -47,47 +58,59 @@ public class PixelPropsUtils {
     private static final Map<String, Object> propsToChangeOP9R;
     private static final Map<String, Object> propsToChange11T;
     private static final Map<String, Object> propsToChangeF4;
+    private static final Map<String, Object> propsToChangeMeizu;
     private static final Map<String, ArrayList<String>> propsToKeep;
 
     // Packages to Spoof as Pixel 7 Pro
     private static final String[] packagesToChangePixel7Pro = {
-            "com.google.android.apps.wallpaper",
             "com.google.android.apps.privacy.wildlife",
-            "com.google.android.apps.subscriptions.red",
-            "com.google.android.dialer",
-            "com.google.android.messaging",
-            "com.google.android.inputmethod.latin"
+            "com.google.android.apps.wallpaper",
+            "com.google.android.apps.wallpaper.pixel",
     };
 
-    // Packages to Spoof as Pixel XL
-    private static final String[] packagesToChangePixelXL = {
-            "com.samsung.accessory",
-            "com.samsung.accessory.fridaymgr",
-            "com.samsung.accessory.berrymgr",
-            "com.samsung.accessory.neobeanmgr",
-            "com.samsung.android.app.watchmanager",
-            "com.samsung.android.geargplugin",
-            "com.samsung.android.gearnplugin",
-            "com.samsung.android.modenplugin",
-            "com.samsung.android.neatplugin",
-            "com.samsung.android.waterplugin"
-    };
-
-    // Extra Packages to Spoof
-    private static final String[] extraPackagesToChange = {
+    // Packages to Spoof as Pixel 7 Pro
+    private static final String[] extraPackagesToChangePixel7Pro = {
+            "com.amazon.avod.thirdpartyclient",
             "com.android.chrome",
             "com.breel.wallpapers20",
+            "com.disney.disneyplus",
+            "com.microsoft.android.smsorganizer",
             "com.nhs.online.nhsonline",
+            "com.nothing.smartcenter",
+            "in.startv.hotstar"
+    };
+
+    private static final String[] extraPackagesToChange = {
             "com.netflix.mediaclient",
-            "com.nothing.smartcenter"
+            "com.snapchat.android"
+    };
+
+    private static final String[] customGoogleCameraPackages = {
+            "com.google.android.MTCL83",
+            "com.google.android.UltraCVM",
+            "com.google.android.apps.cameralite"
+    };
+
+    private static final String[] packagesToChangeUserdebug = {
+            "com.google.android.apps.nexuslauncher"
     };
 
     // Packages to Keep with original device
     private static final String[] packagesToKeep = {
-            "com.google.android.mtcl83",
-            "com.google.android.ultracvm",
+            "com.android.vending",
             "com.google.android.apps.recorder",
-            "com.google.android.apps.wearables.maestro.companion"
+            "com.google.android.apps.restore",
+            "com.google.android.apps.subscriptions.red",
+            "com.google.android.apps.tachyon",
+            "com.google.android.apps.tycho",
+            "com.google.android.apps.wearables.maestro.companion",
+            "com.google.android.apps.youtube.kids",
+            "com.google.android.apps.youtube.music",
+            "com.google.android.dialer",
+            "com.google.android.euicc",
+            "com.google.android.gms",
+            "com.google.android.youtube",
+            "com.google.ar.core"
     };
 
     // Packages to Spoof as ROG Phone 1
@@ -98,7 +121,9 @@ public class PixelPropsUtils {
     // Packages to Spoof as ROG Phone 3
     private static final String[] packagesToChangeROG3 = {
             "com.pearlabyss.blackdesertm",
-            "com.pearlabyss.blackdesertm.gl"
+            "com.pearlabyss.blackdesertm.gl",
+            "com.ea.gp.fifamobile",
+            "com.gameloft.android.ANMP.GloftA9HM"
     };
 
     // Packages to Spoof as Xperia 5
@@ -111,6 +136,7 @@ public class PixelPropsUtils {
 
     // Packages to Spoof as OnePlus 8 Pro
     private static final String[] packagesToChangeOP8P = {
+            "com.mobile.legends",
             "com.netease.lztgglobal",
             "com.pubg.imobile",
             "com.pubg.krmobile",
@@ -133,7 +159,6 @@ public class PixelPropsUtils {
     private static final String[] packagesToChange11T = {
             "com.ea.gp.apexlegendsmobilefps",
             "com.levelinfinite.hotta.gp",
-            "com.mobile.legends",
             "com.supercell.clashofclans",
             "com.tencent.tmgp.sgame",
             "com.vng.mlbbvn"
@@ -145,6 +170,17 @@ public class PixelPropsUtils {
             "com.dts.freefireth"
     };
 
+    // Packages to Spoof as Meizu
+    private static final String[] packagesToChangeMeizu = {
+            "com.netease.cloudmusic",
+            "com.tencent.qqmusic",
+            "com.kugou.android",
+            "com.kugou.android.lite",
+            "cmccwm.mobilemusic",
+            "cn.kuwo.player",
+            "com.meizu.media.music"
+    };
+
     // Codenames for currently supported Pixels by Google
     private static final String[] pixelCodenames = {
             "cheetah",
@@ -152,21 +188,28 @@ public class PixelPropsUtils {
             "bluejay",
             "oriole",
             "raven",
-            "barbet",
             "redfin",
+            "barbet",
             "bramble",
             "sunfish",
             "coral",
-            "flame"
+            "flame",
+            "bonito",
+            "sargo",
+            "crosshatch",
+            "blueline",
+            "taimen",
+            "walleye"
     };
-
-    private static volatile boolean sIsGms = false;
-    private static volatile boolean sIsFinsky = false;
-    private static volatile boolean sNeedsWASpoof = false;
 
     static {
         propsToKeep = new HashMap<>();
         propsToKeep.put("com.google.android.settings.intelligence", new ArrayList<>(Collections.singletonList("FINGERPRINT")));
+        propsToChangeGeneric = new HashMap<>();
+        propsToChangeGeneric.put("TYPE", "user");
+        propsToChangeGeneric.put("TAGS", "release-keys");
+        propsToChangeUserdebug = new HashMap<>();
+        propsToChangeUserdebug.put("TYPE", "userdebug");
         propsToChangePixel7Pro = new HashMap<>();
         propsToChangePixel7Pro.put("BRAND", "google");
         propsToChangePixel7Pro.put("MANUFACTURER", "Google");
@@ -181,6 +224,13 @@ public class PixelPropsUtils {
         propsToChangePixel5.put("PRODUCT", "redfin");
         propsToChangePixel5.put("MODEL", "Pixel 5");
         propsToChangePixel5.put("FINGERPRINT", "google/redfin/redfin:13/TQ2A.230405.003/9719927:user/release-keys");
+        propsToChangePixel2 = new HashMap<>();
+        propsToChangePixel2.put("BRAND", "google");
+        propsToChangePixel2.put("MANUFACTURER", "Google");
+        propsToChangePixel2.put("DEVICE", "walleye");
+        propsToChangePixel2.put("PRODUCT", "walleye");
+        propsToChangePixel2.put("MODEL", "Pixel 2");
+        propsToChangePixel2.put("FINGERPRINT", "google/walleye/walleye:8.1.0/OPM1.171019.011/4448085:user/release-keys");
         propsToChangePixelXL = new HashMap<>();
         propsToChangePixelXL.put("BRAND", "google");
         propsToChangePixelXL.put("MANUFACTURER", "Google");
@@ -209,117 +259,143 @@ public class PixelPropsUtils {
         propsToChangeF4 = new HashMap<>();
         propsToChangeF4.put("MODEL", "22021211RG");
         propsToChangeF4.put("MANUFACTURER", "Xiaomi");
+        propsToChangeMeizu = new HashMap<>();
+        propsToChangeMeizu.put("BRAND", "meizu");
+        propsToChangeMeizu.put("MANUFACTURER", "Meizu");
+        propsToChangeMeizu.put("DEVICE", "m1892");
+        propsToChangeMeizu.put("DISPLAY", "Flyme");
+        propsToChangeMeizu.put("PRODUCT", "meizu_16thPlus_CN");
+        propsToChangeMeizu.put("MODEL", "meizu 16th Plus");
     }
-    
+
     public static void setProps(String packageName) {
-    	String pkgName = packageName.toLowerCase();
-        if (pkgName == null || pkgName.isEmpty()
-            || List.of("camera", "youtube", "euicc", "searchbox" , "ar.core").stream().anyMatch(pkgName::contains)
-            || Arrays.asList(packagesToKeep).contains(pkgName)) {
+        propsToChangeGeneric.forEach((k, v) -> setPropValue(k, v));
+
+        if (packageName == null || packageName.isEmpty()) {
             return;
         }
-        Map<String, Object> propsToChange = new HashMap<>();
-        sIsFinsky = pkgName.equals("com.android.vending");
-        sNeedsWASpoof = List.of("pixelmigrate", "restore", "snapchat").stream().anyMatch(pkgName::contains);
-        if (pkgName.equals("com.google.android.gms")) {
-            final String processName = Application.getProcessName().toLowerCase();
-            sIsGms = List.of("com.google.android.gms.persistent", "com.google.android.gms.unstable").stream().anyMatch(processName::contains);
-        }
-        if (sNeedsWASpoof || sIsGms) {
-             spoofBuildGms();
-        }
-        if (pkgName.startsWith("com.google.") || !sIsFinsky || !sNeedsWASpoof || !sIsGms
-                || Arrays.asList(extraPackagesToChange).contains(pkgName)) {
+        if (packageName.startsWith("com.google.")
+                || packageName.startsWith(SAMSUNG)
+                || Arrays.asList(customGoogleCameraPackages).contains(packageName)
+                || Arrays.asList(extraPackagesToChangePixel7Pro).contains(packageName)
+                || Arrays.asList(extraPackagesToChange).contains(packageName)) {
+
+            if (Arrays.asList(packagesToKeep).contains(packageName)
+                    || Arrays.asList(customGoogleCameraPackages).contains(packageName)
+                    || packageName.startsWith("com.google.android.GoogleCamera")) {
+                return;
+            }
+
+            Map<String, Object> propsToChange = new HashMap<>();
 
             boolean isPixelDevice = Arrays.asList(pixelCodenames).contains(SystemProperties.get(DEVICE));
-                
-            if (pkgName.contains("com.google.android.apps.photos")) {
-                if (SystemProperties.getBoolean("persist.sys.pixelprops.gphotos", false)) {
-                    propsToChange.putAll(propsToChangePixelXL);
-                } else {
+
+            if (packageName.equals("com.google.android.apps.photos")) {
+                if (!SystemProperties.getBoolean("persist.sys.pixelprops.gphotos", false)) {
                     if (isPixelDevice) return;
                     propsToChange.putAll(propsToChangePixel5);
+                } else {
+                    dlog("Spoofing Pixel XL for Google Photos");
+                    propsToChange.putAll(propsToChangePixelXL);
                 }
-            } else if (pkgName.contains("netflix") && 
-                        !SystemProperties.getBoolean("persist.sys.pixelprops.netflix", false)) {
-                    if (DEBUG) Log.d(TAG, "Netflix spoofing disabled by system prop");
+            } else if (packageName.equals("com.netflix.mediaclient")) {
+                if (!SystemProperties.getBoolean("persist.sys.pixelprops.netflix", false)) {
+                    if (isPixelDevice) return;
+                    dlog("Netflix spoofing disabled by system prop");
                     return;
+                } else {
+                    dlog("Spoofing Pixel 7 Pro for Netflix");
+                    propsToChange.putAll(propsToChangePixel7Pro);
+                }
+            } else if (packageName.equals("com.snapchat.android")) {
+                propsToChange.putAll(propsToChangePixel2);
             } else if (isPixelDevice) {
                 return;
             } else {
-                if (Arrays.asList(packagesToChangePixel7Pro).contains(pkgName)) {
+                if ((Arrays.asList(packagesToChangePixel7Pro).contains(packageName))
+                        || Arrays.asList(extraPackagesToChangePixel7Pro).contains(packageName)) {
                     propsToChange.putAll(propsToChangePixel7Pro);
-                } else if (Arrays.asList(packagesToChangePixelXL).contains(pkgName)) {
-                    propsToChange.putAll(propsToChangePixelXL);
+                } else if (Arrays.asList(packagesToChangeUserdebug).contains(packageName)) {
+                    propsToChange.putAll(propsToChangeUserdebug);
                 } else {
                     propsToChange.putAll(propsToChangePixel5);
                 }
             }
 
-            if (DEBUG) Log.d(TAG, "Defining props for: " + pkgName);
+            dlog("Defining props for: " + packageName);
             for (Map.Entry<String, Object> prop : propsToChange.entrySet()) {
                 String key = prop.getKey();
                 Object value = prop.getValue();
-                if (propsToKeep.containsKey(pkgName) && propsToKeep.get(pkgName).contains(key)) {
-                    if (DEBUG) Log.d(TAG, "Not defining " + key + " prop for: " + pkgName);
+                if (propsToKeep.containsKey(packageName) && propsToKeep.get(packageName).contains(key)) {
+                    dlog("Not defining " + key + " prop for: " + packageName);
                     continue;
                 }
-                if (DEBUG) Log.d(TAG, "Defining " + key + " prop for: " + pkgName);
+                dlog("Defining " + key + " prop for: " + packageName);
                 setPropValue(key, value);
             }
             // Set proper indexing fingerprint
-            if (pkgName.contains("settings.intelligence")) {
-                setBuildField("FINGERPRINT", Build.VERSION.INCREMENTAL);
+            if (packageName.equals("com.google.android.settings.intelligence")) {
+                setPropValue("FINGERPRINT", String.valueOf(Build.TIME));
             }
         } else {
+
+            if ((SystemProperties.getBoolean(SPOOF_MUSIC_APPS, false)) &&
+                (Arrays.asList(packagesToChangeMeizu).contains(packageName))) {
+                dlog("Defining props for: " + packageName);
+                for (Map.Entry<String, Object> prop : propsToChangeMeizu.entrySet()) {
+                    String key = prop.getKey();
+                    Object value = prop.getValue();
+                    setPropValue(key, value);
+                }
+            }
 
             if (!SystemProperties.getBoolean("persist.sys.pixelprops.games", false))
                 return;
 
-            if (Arrays.asList(packagesToChangeROG1).contains(pkgName)) {
-                if (DEBUG) Log.d(TAG, "Defining props for: " + pkgName);
+            if (Arrays.asList(packagesToChangeROG1).contains(packageName)) {
+                dlog("Defining props for: " + packageName);
                 for (Map.Entry<String, Object> prop : propsToChangeROG1.entrySet()) {
                     String key = prop.getKey();
                     Object value = prop.getValue();
                     setPropValue(key, value);
                 }
-            } else if (Arrays.asList(packagesToChangeROG3).contains(pkgName)) {
-                if (DEBUG) Log.d(TAG, "Defining props for: " + pkgName);
+            } else if (Arrays.asList(packagesToChangeROG3).contains(packageName)) {
+                dlog("Defining props for: " + packageName);
                 for (Map.Entry<String, Object> prop : propsToChangeROG3.entrySet()) {
                     String key = prop.getKey();
                     Object value = prop.getValue();
                     setPropValue(key, value);
                 }
-            } else if (Arrays.asList(packagesToChangeXP5).contains(pkgName)) {
-                if (DEBUG) Log.d(TAG, "Defining props for: " + pkgName);
+            } else if (Arrays.asList(packagesToChangeXP5).contains(packageName)) {
+                dlog("Defining props for: " + packageName);
                 for (Map.Entry<String, Object> prop : propsToChangeXP5.entrySet()) {
                     String key = prop.getKey();
                     Object value = prop.getValue();
                     setPropValue(key, value);
                 }
-            } else if (Arrays.asList(packagesToChangeOP8P).contains(pkgName)) {
-                if (DEBUG) Log.d(TAG, "Defining props for: " + pkgName);
+            } else if (Arrays.asList(packagesToChangeOP8P).contains(packageName)) {
+                dlog("Defining props for: " + packageName);
                 for (Map.Entry<String, Object> prop : propsToChangeOP8P.entrySet()) {
                     String key = prop.getKey();
                     Object value = prop.getValue();
                     setPropValue(key, value);
                 }
-            } else if (Arrays.asList(packagesToChangeOP9R).contains(pkgName)) {
-                if (DEBUG) Log.d(TAG, "Defining props for: " + pkgName);
+            } else if (Arrays.asList(packagesToChangeOP9R).contains(packageName)) {
+                dlog("Defining props for: " + packageName);
                 for (Map.Entry<String, Object> prop : propsToChangeOP9R.entrySet()) {
                     String key = prop.getKey();
                     Object value = prop.getValue();
                     setPropValue(key, value);
                 }
-            } else if (Arrays.asList(packagesToChange11T).contains(pkgName)) {
-                if (DEBUG) Log.d(TAG, "Defining props for: " + pkgName);
+            } else if (Arrays.asList(packagesToChange11T).contains(packageName)) {
+                dlog("Defining props for: " + packageName);
                 for (Map.Entry<String, Object> prop : propsToChange11T.entrySet()) {
                     String key = prop.getKey();
                     Object value = prop.getValue();
                     setPropValue(key, value);
                 }
-            } else if (Arrays.asList(packagesToChangeF4).contains(pkgName)) {
-                if (DEBUG) Log.d(TAG, "Defining props for: " + pkgName);
+            } else if (Arrays.asList(packagesToChangeF4).contains(packageName)) {
+                dlog("Defining props for: " + packageName);
                 for (Map.Entry<String, Object> prop : propsToChangeF4.entrySet()) {
                     String key = prop.getKey();
                     Object value = prop.getValue();
@@ -331,7 +407,7 @@ public class PixelPropsUtils {
 
     private static void setPropValue(String key, Object value) {
         try {
-            if (DEBUG) Log.d(TAG, "Defining prop " + key + " to " + value.toString());
+            dlog("Defining prop " + key + " to " + value.toString());
             Field field = Build.class.getDeclaredField(key);
             field.setAccessible(true);
             field.set(null, value);
@@ -341,78 +417,7 @@ public class PixelPropsUtils {
         }
     }
 
-    private static void setBuildField(String key, String value) {
-        try {
-            // Unlock
-            Field field = Build.class.getDeclaredField(key);
-            field.setAccessible(true);
-
-            // Edit
-            field.set(null, value);
-
-            // Lock
-            field.setAccessible(false);
-        } catch (NoSuchFieldException | IllegalAccessException e) {
-            Log.e(TAG, "Failed to spoof Build." + key, e);
-        }
-    }
-
-    private static void setVersionField(String key, Integer value) {
-        try {
-            // Unlock
-            Field field = Build.VERSION.class.getDeclaredField(key);
-            field.setAccessible(true);
-
-            // Edit
-            field.set(null, value);
-
-            // Lock
-            field.setAccessible(false);
-        } catch (NoSuchFieldException | IllegalAccessException e) {
-            Log.e(TAG, "Failed to spoof Build." + key, e);
-        }
-    }
-
-    private static void setVersionFieldString(String key, String value) {
-        try {
-            // Unlock
-            Field field = Build.VERSION.class.getDeclaredField(key);
-            field.setAccessible(true);
-
-            // Edit
-            field.set(null, value);
-
-            // Lock
-            field.setAccessible(false);
-        } catch (NoSuchFieldException | IllegalAccessException e) {
-            Log.e(TAG, "Failed to spoof Build." + key, e);
-        }
-    }
-
-    private static void spoofBuildGms() {
-        // Alter most build properties for cts profile match checks
-        setBuildField("BRAND", "google");
-        setBuildField("PRODUCT", "walleye");
-        setBuildField("MODEL", "Pixel 2");
-    	setBuildField("MANUFACTURER", "Google");
-        setBuildField("DEVICE", "walleye");
-        setBuildField("FINGERPRINT", "google/walleye/walleye:8.1.0/OPM1.171019.011/4448085:user/release-keys");
-        setBuildField("ID", "OPM1.171019.011");
-        setBuildField("TYPE", "user");
-        setBuildField("TAGS", "release-keys");
-        setVersionField("DEVICE_INITIAL_SDK_INT", Build.VERSION_CODES.S);
-        setVersionFieldString("SECURITY_PATCH", "2017-12-05");
-    }
-
-    private static boolean isCallerSafetyNet() {
-        return sIsGms && Arrays.stream(Thread.currentThread().getStackTrace())
-                .anyMatch(elem -> elem.getClassName().toLowerCase().contains("droidguard"));
-    }
-
-    public static void onEngineGetCertificateChain() {
-        // Check stack for SafetyNet & PlayIntegrity
-        if (isCallerSafetyNet() || sIsFinsky) {
-            throw new UnsupportedOperationException();
-        }
+    public static void dlog(String msg) {
+      if (DEBUG) Log.d(TAG, msg);
     }
 }
